优化TypeName读取方法

--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -38,7 +38,7 @@
 							</div>
 							<div class="module-item-caption">
 								<span> {{ .VodYear }}</span>
-								<span class="video-class">{{ .VodClass }}</span>
+								<span class="video-class">{{ TypeName $.PageData.listMacType .TypeID }}</span>
 								<span>{{ .VodArea }}</span>
 							</div>
 							<div class="module-item-content">
@@ -97,7 +97,7 @@
 								</div>
 								<div class="module-item-caption">
 									<span> {{ .VodYear }}</span>
-									<span class="video-class">{{ .VodClass }}</span>
+									<span class="video-class">{{ TypeName $.PageData.listMacType .TypeID }}</span>
 									<span>{{ .VodArea }}</span>
 								</div>
 								
@@ -178,7 +178,7 @@
 								</div>
 								<div class="module-item-caption">
 									<span> {{ .VodYear }}</span>
-									<span class="video-class">{{ .VodClass }}</span>
+									<span class="video-class">{{ TypeName $.PageData.listMacType .TypeID }}</span>
 									<span>{{ .VodArea }}</span>
 								</div>
 								
@@ -259,7 +259,7 @@
 								</div>
 								<div class="module-item-caption">
 									<span> {{ .VodYear }}</span>
-									<span class="video-class">{{ .VodClass }}</span>
+									<span class="video-class">{{ TypeName $.PageData.listMacType .TypeID }}</span>
 									<span>{{ .VodArea }}</span>
 								</div>
 								
@@ -338,7 +338,7 @@
 								</div>
 								<div class="module-item-caption">
 									<span> {{ .VodYear }}</span>
-									<span class="video-class">{{ .VodClass }}</span>
+									<span class="video-class">{{ TypeName $.PageData.listMacType .TypeID }}</span>
 									<span>{{ .VodArea }}</span>
 								</div>
 								
@@ -437,7 +437,7 @@
 									</div>
 									<div class="module-item-caption">
 										<span> {{ .VodYear }}</span>
-										<span class="video-class">{{ .VodClass }}</span>
+										<span class="video-class">{{ TypeName $.PageData.listMacType .TypeID }}</span>
 										<span>{{ .VodArea }}</span>
 									</div>
 									
@@ -488,7 +488,7 @@
 									</div>
 									<div class="module-item-caption">
 										<span> {{ .VodYear }}</span>
-										<span class="video-class">{{ .VodClass }}</span>
+										<span class="video-class">{{ TypeName $.PageData.listMacType .TypeID }}</span>
 										<span>{{ .VodArea }}</span>
 									</div>
 									
@@ -540,7 +540,7 @@
 									</div>
 									<div class="module-item-caption">
 										<span> {{ .VodYear }}</span>
-										<span class="video-class">{{ .VodClass }}</span>
+										<span class="video-class">{{ TypeName $.PageData.listMacType .TypeID }}</span>
 										<span>{{ .VodArea }}</span>
 									</div>
 									
@@ -591,7 +591,7 @@
 									</div>
 									<div class="module-item-caption">
 										<span> {{ .VodYear }}</span>
-										<span class="video-class">{{ .VodClass }}</span>
+										<span class="video-class">{{ TypeName $.PageData.listMacType .TypeID }}</span>
 										<span>{{ .VodArea }}</span>
 									</div>
 									
@@ -642,7 +642,7 @@
 									</div>
 									<div class="module-item-caption">
 										<span> {{ .VodYear }}</span>
-										<span class="video-class">{{ .VodClass }}</span>
+										<span class="video-class">{{ TypeName $.PageData.listMacType .TypeID }}</span>
 										<span>{{ .VodArea }}</span>
 									</div>
 									
