--- a/templates/default/v/dianshiju.html
+++ b/templates/default/v/dianshiju.html
@@ -50,7 +50,7 @@
 							</div>
 							<div class="module-item-caption">
 								<span> {{ .VodYear }}</span>
-								<span class="video-class">{{ .VodClass }}</span>
+								<span class="video-class">{{ TypeName $.PageData.listMacType .TypeID }}</span>
 								<span>{{ .VodArea }}</span>
 							</div>
 							<div class="module-item-content">
