完善play页面内容

--- a/templates/default/show.html
+++ b/templates/default/show.html
@@ -269,7 +269,7 @@
 		
 		<div class="module">
 			<div class="module-heading">
-				<h2 class="module-title" title="与哆啦A梦：大雄与天空的理想乡相关的影片列表">相关影片<span class="module-title-en">RELATED</span>
+				<h2 class="module-title" title="与{{ .PageData.detail.VodName }}相关的影片列表">相关影片<span class="module-title-en">RELATED</span>
 				</h2>
 			</div>
 			<div class="module-list module-lines-list">
