--- a/templates/default/play.html
+++ b/templates/default/play.html
@@ -18,12 +18,56 @@
                                     <li class="swiper-slide"><span class="btn-yellow">技巧</span>如遇视频无法播放或加载速度慢，可尝试切换播放节点或者切换解析</li>
                                     <li class="swiper-slide"><span class="btn-main">节点</span>请优先使用靠前节点，NG节点为海外独享</li>
                                     <li class="swiper-slide"><span class="btn-yellow">收藏</span>电影先生网址：<strong>dianyi.ng&nbsp; /&nbsp; www.dianyi.ng&nbsp; ,记得收藏哟～</strong></li>
-                                </div></div>
+                                </div>
+							</div>
                         </ul>
                     </div>
 
                     <div class="player-wrapper">
-                    </div>
+						<script type="text/javascript">
+							var player_aaaa= {
+										"flag": "play",
+										"encrypt": 2,
+										"trysee": 0,
+										"points": 0,
+										"link": "/paly-HcNqCS-1-1.html",
+										"link_next": "/paly-HcNqCS-9-5.html",
+										"link_pre": "/paly-HcNqCS-9-3.html",
+										"vod_data": {
+											"vod_name": "少爷和我",
+											"vod_actor": "张哲华,詹鑫,土豆,吕严,李子雄,王骁,王劲松,蒋龙,张小婉,李晓川,何蓝逗,马旭东,嵇嘉禾,荣飞,傅迦,李川,松天硕,滕哲,雷淞然,杨雨光,李勤勤,李逗逗,刘旸,六兽,石老板,彭浩森,李之夏,孔令美,李璐,贲恩泽 ,史元庭,郝鹏飞,余骁睿,郑钧颢,李奎,罗梓烁,傅铂涵",
+											"vod_director": "王莉",
+											"vod_class": "网剧,剧情,青春,喜剧,短片"
+										},
+										"url": "JTY4JTc0JTc0JTcwJTczJTNBJTJGJTJGJTc2JTJFJTYzJTY0JTZFJTZDJTdBJTMyJTJFJTYzJTZGJTZEJTJGJTMyJTMwJTMyJTM0JTMwJTMyJTMwJTM1JTJGJTMyJTM4JTM3JTMwJTM4JTVGJTY0JTM1JTM0JTY2JTM3JTY2JTYxJTY0JTJGJTY5JTZFJTY0JTY1JTc4JTJFJTZEJTMzJTc1JTM4",
+										"url_next": "JTY4JTc0JTc0JTcwJTczJTNBJTJGJTJGJTc2JTJFJTYzJTY0JTZFJTZDJTdBJTMyJTJFJTYzJTZGJTZEJTJGJTMyJTMwJTMyJTM0JTMwJTMyJTMwJTM1JTJGJTMyJTM4JTM3JTMwJTM3JTVGJTMxJTYyJTMzJTMwJTM3JTMxJTM2JTYzJTJGJTY5JTZFJTY0JTY1JTc4JTJFJTZEJTMzJTc1JTM4",
+										"from": "lzm3u8",
+										"server": "no",
+										"note": "",
+										"id": "HcNqCS",
+										"sid": 9,
+										"nid": 4
+									}
+						</script>
+						<script type="text/javascript" src="{{.__JS__}}/playerconfig.js"></script>
+						<script type="text/javascript" src="{{.__JS__}}/player.js"></script>
+						<style>.MacPlayer{background: #000000;font-size:14px;color:#F6F6F6;margin:0px;padding:0px;position:relative;overflow:hidden;width:100%;height:100%;min-height:100px;}.MacPlayer table{width:100%;height:100%;}.MacPlayer #playleft{position:inherit;!important;width:100%;height:100%;}</style>
+						
+						<div class="MacPlayer">
+							<iframe id="buffer"></iframe>
+							<iframe id="install" ></iframe>
+							<table border="0" cellpadding="0" cellspacing="0">
+								<tbody>
+								<tr>
+									<td id="playleft" valign="top" style=""></td>
+								</tr>
+								</tbody>
+							</table>
+						
+						</div>
+						<script src="{{.__JS__}}/player/lzm3u8.js"></script>
+					
+					</div>
 
                 </div>
             </div>
