--- a/templates/default/404.html
+++ b/templates/default/404.html
@@ -9,22 +9,8 @@
 	<title>糟糕！影片不在这个页面</title>
 	<meta content="电影先生,dianyi.ng,最新电影,电影大全,影视大全,在线电影,免费电影,电影在线观看,最新电视剧" name="keywords">
 	<meta content="聚合全网影片，你想看的全都有！每天搜集互联网最新电影和电视剧，为广大用户免费提供无广告在线观看电影和电视剧服务，及时收录最新、最热、最全的电影大片,高清正版免费看。" name="description">
-	<link href="https://cdn.dianyi.ng/static/picture/logo.png" rel="icon" type="image/png">
-	<link href="https://cdn.dianyi.ng/static/css/style.css" rel="stylesheet" type="text/css">
-	<script async="" src="https://www.clarity.ms/s/0.7.20/clarity.js"></script>
-	<script async="" src="https://www.clarity.ms/tag/k9864eva3r"></script>
-	<script type="text/javascript">
-		(function (c, l, a, r, i, t, y) {
-			c[a] = c[a] || function () {
-				(c[a].q = c[a].q || []).push(arguments)
-			};
-			t = l.createElement(r);
-			t.async = 1;
-			t.src = "https://www.clarity.ms/tag/" + i;
-			y = l.getElementsByTagName(r)[0];
-			y.parentNode.insertBefore(t, y);
-		})(window, document, "clarity", "script", "k9864eva3r");
-	</script>
+	<link href="{{.__STATIC__}}/picture/logo.png" rel="icon" type="image/png">
+	<link href="{{.__CSS__}}/style.css" rel="stylesheet" type="text/css">
 </head>
 <body class="nfmsg page">
 <main class="wrapper" id="main">
