--- a/templates/default/common/header.html
+++ b/templates/default/common/header.html
@@ -36,18 +36,19 @@
 							<div class="drop-content-items ac_hot none">
 								<div class="list-item list-item-title"><strong>大家都在搜这些影片</strong></div>
 								<div class="search-tag">
-									<a href="/search.html" class="hot "><i class="icon-hot"></i>你也有今天</a>
-									<a href="/search.html" class="hot "><i class="icon-hot"></i>潜行</a>
-									<a href="/search.html" class="hot "><i class="icon-hot"></i>请和我的老公结婚</a>
-									<a href="/search.html" class="hot "><i class="icon-hot"></i>低谷医生</a>
-									<a href="/search.html" class=""><i class="icon-hot"></i>我们的翻译官</a>
-									<a href="/search.html" class=""><i class="icon-hot"></i>金手指</a>
-									<a href="/search.html" class=""><i class="icon-hot"></i>年会不能停！</a>
-									<a href="/search.html" class=""><i class="icon-hot"></i>怒潮</a>
-									<a href="/search.html" class=""><i class="icon-hot"></i>临时劫案</a>
-									<a href="/search.html" class=""><i class="icon-hot"></i>热辣滚烫</a>
-									<a href="/search.html" class=""><i class="icon-hot"></i>飞驰人生2</a>
-									<a href="/search.html" class=""><i class="icon-hot"></i>熊出没·逆转时空</a>
+									<a class="hot " href="/search.html"><i class="icon-hot"></i>红毯先生</a>
+									<a class="hot " href="/search.html"><i class="icon-hot"></i>低谷医生</a>
+									<a class="hot " href="/search.html"><i class="icon-hot"></i>非诚勿扰3</a>
+									<a class="hot " href="/search.html"><i class="icon-hot"></i>金手指</a>
+									<a class="" href="/search.html"><i class="icon-hot"></i>年会不能停！</a>
+									<a class="" href="/search.html"><i class="icon-hot"></i>怒潮</a>
+									<a class="" href="/search.html"><i class="icon-hot"></i>临时劫案</a>
+									<a class="" href="/search.html"><i class="icon-hot"></i>热辣滚烫</a>
+									<a class="" href="/search.html"><i class="icon-hot"></i>飞驰人生2</a>
+									<a class="" href="/search.html"><i class="icon-hot"></i>熊出没·逆转时空</a>
+									<a class="" href="/search.html"><i class="icon-hot"></i>照明商店</a>
+									<a class="" href="/search.html"><i class="icon-hot"></i>潜行</a>
+									<a class="" href="/search.html"><i class="icon-hot"></i>第二十条</a>
 								</div>
 							</div>
 						</div>
