--- a/templates/default/common/head.html
+++ b/templates/default/common/head.html
@@ -19,6 +19,11 @@
 	{{if eq .page "zixun"}}
 	<link href="{{.__CSS__}}/mxone.css" rel="stylesheet" type="text/css">
 	{{end}}
+	
+	{{if eq .page "about"}}
+	<link href="{.__STATIC__}}/cdn/expire-1-M/layer/3.1.1/theme/default/layer.css?v=3.1.1" id="layuicss-layer" rel="stylesheet">
+	{{end}}
+	
 	<script src="{{.__STATIC__}}/cdn/expire-1-M/jquery/1.9.1/jquery.min.js"></script>
 	<script src="{{.__JS__}}/jquery.lazyload.js" type="text/javascript"></script>
 	<script src="{{.__STATIC__}}/cdn/expire-10-y/jquery-autocomplete/1.0.7/jquery.auto-complete.js"></script>
